Fix mentee book appointment (#156)
* Fix minor css bug

* partial backend connection

* connected availability

* Finished connection to backend

* added verification of appointment date

* fix css bugs

* Added form validation

* merge master into branch

* fix: dates not showing on buttons

* add more validation

* added form reset

* remove appointments once set

* added documentation

* Remove flex in css

* fix row spacing input

* adjust api to reflect backend changes

* change hindu to hindi

* Clean up code

* format

--- a/frontend/src/components/css/MenteeModal.scss
+++ b/frontend/src/components/css/MenteeModal.scss
@@ -113,7 +113,6 @@
 }
 
 .modal-mentee-appointment-contact-container {
-    display: flex;
     flex: 1;
 }
 
@@ -195,6 +194,9 @@
     align-items: center;
     padding-right: 5%;
     width: 100%;
+}
+.input-text{
+    overflow:hidden;
 }
 
 .bold {
