--- a/frontend/src/components/css/Modal.scss
+++ b/frontend/src/components/css/Modal.scss
@@ -108,4 +108,27 @@
     font-size: 18px;
     font-weight: 500;
     overflow-y: scroll;
+    background-color: inherit;
+}
+
+.modal-mentee-appointment-contact-container {
+    display: inline;
+}
+
+
+// This is probably bad coding practice so probably want to replace
+.ant-form-item-has-error{
+    background-color: inherit !important;
+    border-color: inherit !important;
+}
+
+.ant-form-item{
+    margin: 0;
+}
+.ant-input {
+    background-color: inherit !important;
+}
+
+ant-form-item-has-error, .ant-input:focus {
+    box-shadow: none !important;
 }
